09-FinalProject/ui/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: weatherapp-ui
spec: 
  type: ClusterIP
  ports:
    - port: 3000
      name: http
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: weatherapp-ui
